# Trip-Planner

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  SETUP.md  WEB_APP_GUIDE.md  app.py  docker-compose.yml  main.py  pyproject.toml  recreate_venv.sh  render.yaml  requirements.txt  run.sh  setup.sh  test_backend.py
.github/workflows/: ci.yml
blog/: README.md
blog/Phase I — MVP travel planner/: part1-setup-and-architecture.md  part10-running-and-testing.md  part2-configuration-and-environment.md  part3-configuration-module.md  part4-session-management.md  part5-specialized-agents.md  part6-concierge-orchestrator.md  part7-custom-tools.md  part8-web-interface.md  part9-observability.md
blog/Phase II — Production Ready/: part1-rate-limiting.md  part2-authentication.md  part3-docker-and-deployment.md
blog/Phase III — CI/: part1-https-only-cookies.md  part2-email-validation.md  part3-ci-and-branch-protection.md  part4-logging-standardization.md  part5-redis-backed-rate-limiting.md  part6-redis-backed-session-memory.md
static/css/: style.css
static/js/: app.js
templates/: index.html
tests/: conftest.py  test_auth_password.py  test_auth_security.py  test_backend.py  test_rate_limiter.py  test_redis_debug.py  test_session_memory.py
trip_planner/: __init__.py  config.py  logging_utils.py
trip_planner/agents/: __init__.py  concierge.py  financial_planner.py  flight_recommender.py  hotel_specialist.py
trip_planner/core/: __init__.py  auth.py  rate_limiter.py  redis_client.py  redis_debug.py  runner.py  session_manager.py
(+9 files in other folders)
